--- a/Style.css
+++ b/Style.css
@@ -722,9 +722,9 @@ width:fit-content;
 }
 .Project .frame-2 {
   left: 1670px;
-  position:fixed;
+  position:absolute;
   top: 23.1rem;
-  right: 0.6rem;
+  
   display: flex;
   flex-direction: column;
 
