--- a/Style.css
+++ b/Style.css
@@ -721,10 +721,9 @@ width:fit-content;
   color: #04285A;
 }
 .Project .frame-2 {
-
-  position: absolute;
+  left:105.1rem;;
+  position:absolute;
   top: 23.1rem;
-  right: 0.6rem;
   display: flex;
   flex-direction: column;
   box-sizing: border-box;
